# GitSimulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/git_sim/: __init__.py  snapshot.py
src/git_sim/cli/: __init__.py  main.py
src/git_sim/cli/commands/: __init__.py  rebase.py
src/git_sim/cli/formatters/: __init__.py  conflict.py  diff.py  graph.py
src/git_sim/core/: __init__.py  diff_analyzer.py  exceptions.py  models.py  repository.py
src/git_sim/plugins/: __init__.py  base.py  loader.py
src/git_sim/simulation/: __init__.py  base.py  cherry_pick.py  conflict_detector.py  dispatcher.py  explain.py  merge.py  rebase.py  reset.py
src/git_sim/tui/: __init__.py  app.py
tests/: __init__.py  conftest.py  test_cherry_pick.py  test_cli_commands.py  test_cli_extended_smoke.py  test_conflict_detection.py  test_dispatcher.py  test_merge.py  test_models.py  test_plugin_hooks.py  test_rebase.py  test_repository.py  test_reset.py  test_snapshot.py  test_tui_smoke.py
