[project]
name = "gitsimulator"
version = "1.0.1"
description = "Git simulation and visualization engine - dry run dangerous Git commands with visual feedback before executing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "GitSim Contributors", email = "egekaya1@users.noreply.github.com" }
]
maintainers = [
    { name = "Ege Kaya", email = "egekaya1@users.noreply.github.com" }
]
keywords = [
    "git",
    "simulation",
    "rebase",
    "merge",
    "visualization",
    "cli",
    "conflict-detection",
    "safety",
    "education",
    "developer-tools",
    "version-control",
    "dulwich",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Education",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "dulwich>=0.21.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "textual>=0.40.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/egekaya1/GitSimulator"
Repository = "https://github.com/egekaya1/GitSimulator"
Issues = "https://github.com/egekaya1/GitSimulator/issues"
Documentation = "https://github.com/egekaya1/GitSimulator#readme"

[project.scripts]
git-sim = "git_sim.cli.main:app"
gitsim = "git_sim.cli.main:app"
gitsimulator = "git_sim.cli.main:app"



# Plugin entry points - external plugins register here
# Example: [project.entry-points."git_sim.plugins"]
# my-plugin = "my_package.plugin:MyPlugin"
[project.entry-points."git_sim.plugins"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/git_sim"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
